--- a/templates/base.html
+++ b/templates/base.html
@@ -8,15 +8,15 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!-- Custom css -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %} css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <title>Test Real Estate</title>
 </head>
 <body>
 {% block content %}
 {% endblock %}
-<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
