--- a/templates/base.html
+++ b/templates/base.html
@@ -14,29 +14,7 @@
 </head>
 
 <body class="d-flex flex-column h-100">
-<header>
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Fixed navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about">About</a>
-                </li>
-
-            </ul>
-
-        </div>
-    </nav>
-</header>
-
+{% include 'partials/_navbar.html' %}
 <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
     <div class="container-fluid">
@@ -44,13 +22,8 @@
         {% endblock %}
     </div>
 </main>
+{% include 'partials/_footer.html' %}
 
-<footer class="footer mt-auto py-3">
-    <div class="container-fluid text-center">
-        <span class="text-muted">Copyright @ 2020 By Mustafa Elagamey , Email : <a href = "mailto: eng.mustafaelagamey@gmail.com">eng.mustafaelagamey@gmail.com</a>
- </span>
-    </div>
-</footer>
 
 <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
