--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,6 +1,6 @@
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Fixed navbar</a>
+        <a class="navbar-brand text-secondary " href="/"><i class="fas fa-home fa-bold fa-lg"></i> Real Estate</a> <span class="text-secondary">|</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
