--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,9 @@
     {% load static %}
     <meta charset="UTF-8">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="{% static 'css/all.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/all.css' %}">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <!-- Custom css -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
@@ -14,10 +14,25 @@
 </head>
 
 <body class="d-flex flex-column h-100">
+
 {% include 'partials/_navbar.html' %}
 <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
     <div class="container-fluid">
+     <!-- Breadcrumb -->
+  <section id="bc" class="mt-3">
+    <div class="container">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="{% url 'index' %}">
+              <i class="fas fa-home"></i> Home</a>
+          </li>
+          <li class="breadcrumb-item active"> About</li>
+        </ol>
+      </nav>
+    </div>
+  </section>
         {% block content %}
         {% endblock %}
     </div>
@@ -25,7 +40,7 @@
 {% include 'partials/_footer.html' %}
 
 
-<script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+<script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
 </body>
