--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,21 +1,37 @@
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand text-secondary " href="/"><i class="fas fa-home fa-bold fa-lg"></i> Real Estate</a> <span class="text-secondary">|</span>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about">About</a>
-                </li>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+        <div class="container">
+            <a class="navbar-brand " href="{% url 'index' %}"><i class="fas fa-home fa-bold fa-lg"></i> Real Estate</a>
+            <span class="text-secondary"> |</span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <ul class="navbar-nav">
+                    <li class="nav-item {% if request.resolver_match.url_name == 'index' %}active{% endif %}  mr-3">
+                        <a class="nav-link" href="{% url 'index' %}">Home</a>
+                    </li>
+                    <li class="nav-item {% if request.resolver_match.url_name == 'about' %}active{% endif %}  mr-3">
+                        <a class="nav-link" href="{% url 'about' %}">About</a>
+                    </li>
+                    <li class="nav-item {% if request.resolver_match.url_name == 'listings' %}active{% endif %}  mr-3">
+                        <a class="nav-link" href="/listings">Featured Listings</a>
+                    </li>
+                </ul>
 
-            </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item {% if request.resolver_match.url_name == 'register' %}active{% endif %}  mr-3">
+                        <a class="nav-link" href="/register">
+                            <i class="fas fa-user-plus"></i> Register</a>
+                    </li>
+                    <li class="nav-item {% if request.resolver_match.url_name == 'login' %}active{% endif %}  mr-3">
+                        <a class="nav-link" href="/login">
+                            <i class="fas fa-sign-in-alt"></i>
 
+                            Login</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 </header>
