--- a/templates/base.html
+++ b/templates/base.html
@@ -20,19 +20,23 @@
 <main role="main" class="flex-shrink-0">
     <div class="container-fluid">
      <!-- Breadcrumb -->
-  <section id="bc" class="mt-3">
-    <div class="container">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item">
-            <a href="{% url 'index' %}">
-              <i class="fas fa-home"></i> Home</a>
-          </li>
-          <li class="breadcrumb-item active"> About</li>
-        </ol>
-      </nav>
-    </div>
-  </section>
+        <section id="bc" class="mt-3">
+            <div class="container">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item">
+                            <a href="{% url 'index' %}">
+                                <i class="fas fa-home"></i> Home</a>
+                        </li>
+{#                        <li class="breadcrumb-item active"> About</li>#}
+{#                        <li class="breadcrumb-item active"> Browse Listings</li>#}
+{#                                  <li class="breadcrumb-item active">42 Drivewood Circle</li>#}
+
+
+                    </ol>
+                </nav>
+            </div>
+        </section>
         {% block content %}
         {% endblock %}
     </div>
