--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -14,7 +14,7 @@
                     <li class="nav-item {% if request.resolver_match.url_name == 'about' %}active{% endif %}  mr-3">
                         <a class="nav-link" href="{% url 'about' %}">About</a>
                     </li>
-                    <li class="nav-item {% if request.resolver_match.url_name == 'listings' %}active{% endif %}  mr-3">
+                    <li class="nav-item {% if request.resolver_match.url_name == 'listings_index' %}active{% endif %}  mr-3">
                         <a class="nav-link" href="/listings">Featured Listings</a>
                     </li>
                 </ul>
