--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -20,12 +20,12 @@
                 </ul>
 
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item {% if request.resolver_match.url_name == 'register' %}active{% endif %}  mr-3">
+                    <li class="nav-item {% if request.resolver_match.url_name == 'admin:register' %}active{% endif %}  mr-3">
                         <a class="nav-link" href="/register">
                             <i class="fas fa-user-plus"></i> Register</a>
                     </li>
-                    <li class="nav-item {% if request.resolver_match.url_name == 'login' %}active{% endif %}  mr-3">
-                        <a class="nav-link" href="/login">
+                    <li class="nav-item {% if request.resolver_match.url_name == 'admin:login' %}active{% endif %}  mr-3">
+                        <a class="nav-link" href="{% url 'admin:login' %}">
                             <i class="fas fa-sign-in-alt"></i>
 
                             Login</a>
